Update: fonts, colors, navbar, banner, footer

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alto",
+  "name": "suncity-website",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -17,8 +17,9 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.5",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource-variable/raleway": "^5.0.20",
-    "@fontsource/poppins": "^5.0.14",
+    "@fontsource-variable/montserrat": "^5.1.0",
+    "@fontsource-variable/quicksand": "^5.1.0",
+    "@fontsource/merriweather": "^5.1.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "alpinejs": "^3.14.0",
