--- a/package.json
+++ b/package.json
@@ -10,30 +10,31 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@alpinejs/intersect": "^3.14.0",
-    "@astrojs/mdx": "^2.3.1",
-    "@astrojs/partytown": "^2.1.0",
-    "@astrojs/react": "^3.3.2",
-    "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.1.5",
-    "@astrojs/tailwind": "^5.1.0",
+    "@alpinejs/intersect": "^3.14.1",
+    "@astrojs/mdx": "^3.1.7",
+    "@astrojs/partytown": "^2.1.2",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/rss": "^4.0.7",
+    "@astrojs/sitemap": "^3.2.0",
+    "@astrojs/tailwind": "^5.1.1",
     "@fontsource-variable/montserrat": "^5.1.0",
     "@fontsource-variable/quicksand": "^5.1.0",
     "@fontsource/merriweather": "^5.1.0",
-    "@types/react": "^18.3.1",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "alpinejs": "^3.14.0",
-    "astro": "^4.7.1",
+    "alpinejs": "^3.14.1",
+    "astro": "^4.15.12",
+    "astro-embed": "^0.7.4",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
-    "swiper": "^11.1.3",
-    "tailwindcss": "^3.4.3"
+    "react-icons": "^5.3.0",
+    "swiper": "^11.1.14",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13",
-    "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0"
+    "@tailwindcss/typography": "^0.5.15",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
