--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "prettier": "^3.4.1",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier": "3.5.3",
+    "prettier-plugin-astro": "0.14.1"
   }
 }
