--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "jsdom": "^28.0.0",
     "prettier": "3.5.3",
-    "prettier-plugin-astro": "0.14.1"
+    "prettier-plugin-astro": "0.14.1",
+    "turndown": "^7.2.2"
   }
 }
